# zotero-mcp

./: Cargo.toml  IMAGE_EXTRACTION_IMPLEMENTATION.md  README.md  READ_COMMAND_IMAGE_INTEGRATION.md  USAGE_IMAGE_TOOLS.md  flake.nix
.opencode/command/: read-analyze.md  read-review.md  read-skim.md  read-sq3r.md  read.md  readassist-permanent-note.md  readassist-read-analyze.md  readassist-read-review.md  readassist-read-skim.md  readassist-read-sq3r.md  readassist-read.md  readassist-summarize.md  readassist-synthesize.md
.opencode/commands/: read.md
crates/zotero-client/: Cargo.toml
crates/zotero-client/examples/: highlight_test.rs  multiline_highlight_test.rs  test_file_output.rs  test_image.rs  test_sizes.rs
crates/zotero-client/src/: client.rs  error.rs  lib.rs  pdf.rs  tests.rs  types.rs
crates/zotero-client/src/image/: detection.rs  mod.rs  render.rs
crates/zotero-client/src/image/tests/: mod.rs
crates/zotero-client/tests/: integration.rs
crates/zotero-mcp/: Cargo.toml  README.md
crates/zotero-mcp-cli/: Cargo.toml
crates/zotero-mcp-cli/src/: main.rs
crates/zotero-mcp-server/: Cargo.toml  README.md
crates/zotero-mcp-server/src/: main.rs  server.rs  tools.rs
crates/zotero-mcp/src/: image_tools.rs  lib.rs  server.rs  tools.rs
examples/: test_image_extraction.rs
openspec/: AGENTS.md  project.md
openspec/changes/add-critical-reading-workflow/: proposal.md  tasks.md
openspec/changes/add-note-synthesis/: design.md  proposal.md  tasks.md
openspec/changes/add-note-synthesis/specs/mcp-server/: spec.md
openspec/changes/add-note-synthesis/specs/note-synthesis/: spec.md
openspec/changes/add-note-synthesis/specs/obsidian-integration/: spec.md
openspec/changes/add-outline-section-support/: design.md  proposal.md  tasks.md
openspec/changes/add-outline-section-support/specs/slash-command/: spec.md
openspec/changes/add-pdf-image-extraction/: tasks.md
openspec/changes/add-reading-strategies/: design.md  proposal.md  tasks.md
openspec/changes/add-reading-strategies/specs/reading-strategies/: spec.md
openspec/changes/add-reading-strategies/specs/slash-command/: spec.md
openspec/changes/archive/2026-01-04-add-zotero-client/: proposal.md  tasks.md
openspec/changes/archive/2026-01-04-add-zotero-client/specs/zotero-client/: spec.md
openspec/changes/archive/2026-01-05-add-critical-reading-workflow/: design.md  tasks.md
openspec/changes/archive/2026-01-05-add-critical-reading-workflow/specs/area-annotation/: spec.md
openspec/changes/archive/2026-01-05-add-critical-reading-workflow/specs/mcp-server/: spec.md
openspec/changes/archive/2026-01-05-add-critical-reading-workflow/specs/slash-command/: spec.md
openspec/changes/archive/2026-01-05-add-critical-reading-workflow/specs/zotero-client/: spec.md
openspec/changes/archive/2026-01-05-add-outline-section-support/: tasks.md
openspec/changes/archive/2026-01-05-add-outline-section-support/specs/mcp-server/: spec.md
openspec/changes/archive/2026-01-05-add-pdf-image-extraction/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-05-add-pdf-image-extraction/specs/image-extraction/: spec.md
openspec/changes/archive/2026-01-05-add-pdf-image-extraction/specs/mcp-server/: spec.md
openspec/changes/archive/2026-01-05-add-reading-strategies/: design.md  tasks.md
openspec/changes/archive/2026-01-05-standardize-color-workflow/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-05-standardize-color-workflow/specs/color-scheme/: spec.md
openspec/changes/archive/2026-01-05-standardize-color-workflow/specs/workflow-integration/: spec.md
openspec/changes/archive/2026-01-06-add-note-synthesis/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-06-add-note-synthesis/specs/note-synthesis/: spec.md
openspec/changes/archive/2026-01-06-update-section-color-semantics/: proposal.md  tasks.md
openspec/changes/archive/2026-01-06-update-section-color-semantics/specs/color-scheme/: spec.md
openspec/changes/archive/2026-01-07-add-zettelkasten-notes/: proposal.md  tasks.md
openspec/changes/archive/2026-01-07-add-zettelkasten-notes/specs/note-synthesis/: spec.md
openspec/changes/archive/2026-01-07-integrate-permanent-notes/: proposal.md  tasks.md
openspec/changes/archive/2026-01-07-integrate-permanent-notes/specs/note-synthesis/: spec.md
openspec/changes/archive/2026-01-07-integrate-permanent-notes/specs/slash-command/: spec.md
openspec/changes/archive/2026-01-07-rename-readassist-commands/: proposal.md  tasks.md
openspec/changes/archive/2026-01-07-rename-readassist-commands/specs/slash-command/: spec.md
openspec/specs/area-annotation/: spec.md
openspec/specs/color-scheme/: spec.md
openspec/specs/image-extraction/: spec.md
openspec/specs/mcp-server/: spec.md
openspec/specs/note-synthesis/: spec.md
openspec/specs/reading-strategies/: spec.md
openspec/specs/slash-command/: spec.md
openspec/specs/workflow-integration/: spec.md
openspec/specs/zotero-client/: spec.md
zotero-mcp-plugin/: README.md  bootstrap.js  build.sh  manifest.json  mcp-zotero-api.xpi
