[package]
name = "zotero-mcp-server"
version = "0.1.0"
edition = "2021"
description = "MCP server for Zotero integration - enables AI assistants to read PDFs and create annotations"
license = "MIT"
repository = "https://github.com/yourusername/zotero-mcp"
keywords = ["zotero", "mcp", "server", "ai", "annotations"]
categories = ["command-line-utilities"]

[[bin]]
name = "zotero-mcp-server"
path = "src/main.rs"

[dependencies]
# MCP protocol implementation
rmcp = { version = "0.12", features = ["server", "transport-io", "macros"] }

# Zotero client
zotero-client = { path = "../zotero-client", features = ["pdf"] }

# Async runtime
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "io-std"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Use rmcp's re-exported schemars to avoid version conflicts

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "test-util"] }
