[package]
name = "zotero-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server library for Zotero integration - enables AI assistants to read PDFs and create annotations"
license = "MIT"
repository = "https://github.com/yourusername/zotero-mcp"
keywords = ["zotero", "mcp", "server", "ai", "annotations"]
categories = ["api-bindings"]

[lib]
path = "src/lib.rs"

[dependencies]
# MCP protocol implementation
rmcp = { version = "0.12", features = ["server", "transport-io", "macros"] }

# Zotero client
zotero-client = { path = "../zotero-client", features = ["pdf", "image"] }

# Async runtime
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "io-std"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "test-util"] }
